Update contact information placeholders in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -427,11 +427,11 @@
     </div>
     <div class="field-group">
       <label>טלפון</label>
-      <input type="text" id="e-phone" placeholder="050-000-0000" oninput="updateContact()">
+      <input type="text" id="e-phone" placeholder="052-4014040" oninput="updateContact()">
     </div>
     <div class="field-group">
       <label>אימייל</label>
-      <input type="text" id="e-email" placeholder="your@email.com" oninput="updateContact()">
+      <input type="text" id="e-email" placeholder="asias33@gmail.com" oninput="updateContact()">
     </div>
     <div class="field-group">
       <label>קישור LinkedIn (אופציונלי)</label>
